<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mixologist</string>

    <!-- Misc strings. -->
    <string name="search">Search</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="photograph">Photograph</string>
    <string name="favorite">Favorite</string>
    <string name="print">Print</string>
    <string name="rate_message">If you like the app, please consider reviewing it in the Play Store.</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="preferences">Preferences</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="centilitres">centilitres (cl)</string>
    <string name="millilitres">millilitres (ml)</string>
    <string name="ounces">ounces (oz)</string>
    <string name="garnish_optional">Treat garnish as optional</string>
    <string name="cocktail_photo">cocktail photograph</string>
    <string name="no_recipes_found">No recipes found.</string>
    <string name="no_ingredients_warning">You haven\'t added any ingredients yet. Please use the \"Ingredients\" tab to indicate which ingredients you have available.</string>
    <string name="missing_ingredients">missing %s</string>
    <string name="photo_credit">Photo courtesy of %s</string>

    <!-- Ingredients. -->
    <string name="absinthe_short">absinthe</string>
    <string name="absinthe_long">Absinthe</string>
    <string name="angostura_bitters_short">Angostura bitters</string>
    <string name="angostura_bitters_long">Angostura Bitters</string>
    <string name="orange_bitters_short">orange bitters</string>
    <string name="orange_bitters_long">Orange Bitters</string>
    <string name="peach_bitters_short">peach bitters</string>
    <string name="peach_bitters_long">Peach Bitters</string>
    <string name="peychauds_bitters_short">Peychaud\'s Bitters</string>
    <string name="peychauds_bitters_long">Peychaud\'s Bitters</string>
    <string name="campari_short">Campari</string>
    <string name="campari_long">Campari</string>
    <string name="brandy_short">brandy</string>
    <string name="brandy_long">Brandy</string>
    <string name="pisco_short">pisco</string>
    <string name="pisco_long">Pisco</string>
    <string name="apricot_brandy_short">apricot brandy</string>
    <string name="apricot_brandy_long">Apricot Brandy</string>
    <string name="cognac_short">cognac</string>
    <string name="cognac_long">Cognac</string>
    <string name="kirsch_short">kirsch</string>
    <string name="kirsch_long">Kirsch</string>
    <string name="calvados_short">calvados</string>
    <string name="calvados_long">Calvados</string>
    <string name="coffee_short">coffee</string>
    <string name="coffee_long">Coffee</string>
    <string name="coffee_liqueur_short">coffee liqueur</string>
    <string name="coffee_liqueur_long">Coffee Liqueur</string>
    <string name="irish_cream_short">Irish cream</string>
    <string name="irish_cream_long">Irish Cream</string>
    <string name="triple_sec_short">triple sec</string>
    <string name="triple_sec_long">Triple Sec</string>
    <string name="curacao_short">curaćao</string>
    <string name="curacao_long">Curaćao</string>
    <string name="maraschino_short">maraschino</string>
    <string name="maraschino_long">Maraschino</string>
    <string name="galliano_short">Galliano</string>
    <string name="galliano_long">Galliano</string>
    <string name="cachaca_short">cachaça</string>
    <string name="cachaca_long">Cachaça</string>
    <string name="amaretto_short">amaretto</string>
    <string name="amaretto_long">Amaretto</string>
    <string name="raspberry_liqueur_short">raspberry liqueur</string>
    <string name="raspberry_liqueur_long">Raspberry Liqueur</string>
    <string name="blackberry_liqueur_short">blackberry liqueur</string>
    <string name="blackberry_liqueur_long">Blackberry Liqueur</string>
    <string name="cherry_liqueur_short">cherry liqueur</string>
    <string name="cherry_liqueur_long">Cherry Liqueur</string>
    <string name="drambuie_short">Drambuie</string>
    <string name="drambuie_long">Drambuie</string>
    <string name="peach_schnapps_short">peach schnapps</string>
    <string name="peach_schnapps_long">Peach Schnapps</string>
    <string name="benedictine_short">Bénédictine</string>
    <string name="benedictine_long">Bénédictine</string>
    <string name="aperol_short">Aperol</string>
    <string name="aperol_long">Aperol</string>
    <string name="creme_de_cacao_short">créme de cacao</string>
    <string name="creme_de_cacao_long">Créme de Cacao</string>
    <string name="creme_de_cassis_short">créme de cassis</string>
    <string name="creme_de_cassis_long">Créme de Cassis</string>
    <string name="creme_de_menthe_short">crème de menthe</string>
    <string name="creme_de_menthe_long">Crème de Menthe</string>
    <string name="gin_short">gin</string>
    <string name="gin_long">Gin</string>
    <string name="white_rum_short">white rum</string>
    <string name="white_rum_long">White Rum</string>
    <string name="gold_rum_short">gold rum</string>
    <string name="gold_rum_long">Gold Rum</string>
    <string name="dark_rum_short">dark rum</string>
    <string name="dark_rum_long">Dark Rum</string>
    <string name="tequila_short">tequila</string>
    <string name="tequila_long">Tequila</string>
    <string name="vodka_short">vodka</string>
    <string name="vodka_long">Vodka</string>
    <string name="vodka_citron_short">vodka citron</string>
    <string name="vodka_citron_long">Vodka Citron</string>
    <string name="scotch_whisky_short">Scotch</string>
    <string name="scotch_whisky_long">Scotch Whisky</string>
    <string name="bourbon_whisky_short">bourbon</string>
    <string name="bourbon_whisky_long">Bourbon Whisky</string>
    <string name="rye_whisky_short">rye</string>
    <string name="rye_whisky_long">Rye Whisky</string>
    <string name="irish_whisky_short">Irish whisky</string>
    <string name="irish_whisky_long">Irish Whisky</string>
    <string name="red_wine_short">red wine</string>
    <string name="red_wine_long">Red Wine</string>
    <string name="white_wine_short">white wine</string>
    <string name="white_wine_long">White Wine</string>
    <string name="sparkling_wine_short">sparkling wine</string>
    <string name="sparkling_wine_long">Sparkling Wine</string>
    <string name="dry_vermouth_short">dry vermouth</string>
    <string name="dry_vermouth_long">Dry Vermouth (White)</string>
    <string name="sweet_red_vermouth_short">sweet red vermouth</string>
    <string name="sweet_red_vermouth_long">Sweet Vermouth (Red)</string>
    <string name="sweet_white_vermouth_short">sweet vermouth</string>
    <string name="sweet_white_vermouth_long">Sweet Vermouth (White)</string>
    <string name="red_port_short">red port</string>
    <string name="red_port_long">Red Port</string>
    <string name="white_port_short">white port</string>
    <string name="white_port_long">White Port</string>
    <string name="lillet_short">Lillet</string>
    <string name="lillet_long">Lillet</string>
    <string name="cola_short">cola</string>
    <string name="cola_long">Cola</string>
    <string name="ginger_ale_short">ginger ale</string>
    <string name="ginger_ale_long">Ginger Ale</string>
    <string name="ginger_beer_short">ginger beer</string>
    <string name="ginger_beer_long">Ginger Beer</string>
    <string name="oranges_short">oranges</string>
    <string name="oranges_long">Oranges / Orange Juice</string>
    <string name="lemons_short">lemons</string>
    <string name="lemons_long">Lemons / Lemon Juice</string>
    <string name="limes_short">limes</string>
    <string name="limes_long">Limes / Lime Juice</string>
    <string name="pineapples_short">pineapples</string>
    <string name="pineapples_long">Pineapples / Pineapple Juice</string>
    <string name="peaches_short">peaches</string>
    <string name="peaches_long">Peaches / Peace Juice</string>
    <string name="tomatoes_short">tomatoes</string>
    <string name="tomatoes_long">Tomatoes / Tomato Juice</string>
    <string name="cranberries_short">cranberries</string>
    <string name="cranberries_long">Cranberries / Cranberry Juice</string>
    <string name="olives_short">olives</string>
    <string name="olives_long">Olives / Olive Juice</string>
    <string name="grapefruits_short">grapefruits</string>
    <string name="grapefruits_long">Grapefruits / Grapefruit Juice</string>
    <string name="onions_short">onions</string>
    <string name="onions_long">Onions</string>
    <string name="maraschino_cherries_short">maraschino cherries</string>
    <string name="maraschino_cherries_long">Maraschino Cherries</string>
    <string name="sugar_syrup_short">sugar</string>
    <string name="sugar_syrup_long">Sugar / Sugar Syrup</string>
    <string name="gomme_syrup_short">gomme syrup</string>
    <string name="gomme_syrup_long">Gomme Syrup</string>
    <string name="orgeat_syrup_short">orgeat syrup</string>
    <string name="orgeat_syrup_long">Orgeat Syrup</string>
    <string name="strawberry_syrup_short">strawberry syrup</string>
    <string name="strawberry_syrup_long">Strawberry Syrup</string>
    <string name="raspberry_syrup_short">raspberry syrup</string>
    <string name="raspberry_syrup_long">Raspberry Syrup</string>
    <string name="honey_short">honey</string>
    <string name="honey_long">Honey</string>
    <string name="agave_nectar_short">agave nectar</string>
    <string name="agave_nectar_long">Agave Nectar</string>
    <string name="grenadine_short">grenadine</string>
    <string name="grenadine_long">Grenadine</string>
    <string name="soda_water_short">soda water</string>
    <string name="soda_water_long">Soda Water</string>
    <string name="orange_flower_water_short">orange flower water</string>
    <string name="orange_flower_water_long">Orange Flower Water</string>
    <string name="eggs_short">eggs</string>
    <string name="eggs_long">Eggs</string>
    <string name="milk_short">milk</string>
    <string name="milk_long">Milk</string>
    <string name="cream_short">cream</string>
    <string name="cream_long">Cream</string>
    <string name="vanilla_short">vanilla</string>
    <string name="vanilla_long">Vanilla</string>
    <string name="mint_leaves_short">mint</string>
    <string name="mint_leaves_long">Mint Leaves</string>
    <string name="chili_peppers_short">chili peppers</string>
    <string name="chili_peppers_long">Chili Peppers</string>
    <string name="worcestershire_sauce_short">Worcestershire sauce</string>
    <string name="worcestershire_sauce_long">Worcestershire Sauce</string>
    <string name="tabasco_short">tabasco</string>
    <string name="tabasco_long">Tabasco</string>
    <string name="salt_short">salt</string>
    <string name="salt_long">Salt</string>
    <string name="celery_salt_short">celery salt</string>
    <string name="celery_salt_long">Celery Salt</string>
    <string name="pepper_short">pepper</string>
    <string name="pepper_long">Pepper</string>
    <string name="nutmeg_short">nutmeg</string>
    <string name="nutmeg_long">Nutmeg</string>
</resources>
